# sklearn-riskslim-slim

./: .gitignore  README.md  pyproject.toml
skslim/: __init__.py  rslim.py  slim.py
