[tool.poetry]
name = "sklearn-riskslim-slim"
version = "0.2.1"
description = ""
authors = ["Stefan Heid <stefan.heid@upb.de>"]
readme = "README.md"
packages = [{ include = "skslim" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
scipy = "^1.11.3"
pandas = "^2.1.1"
cplex = "^22.1.1.1"
prettytable = "^3.9.0"
scikit-learn = "^1.3.1"
# import fork as the original repository does not support python3
slim-python = {git = "https://github.com/stheid/slim-python.git"}
riskslim = {git = "https://github.com/ustunb/risk-slim.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
